# nexus

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  README.md  RESOURCES.md  meson.build  protocol-structure
.conan/recipes/: .gitignore
.conan/recipes/msquic/: conanfile.py
.conan/recipes/msquic/test_package/: CMakeLists.txt  conanfile.py
.conan/recipes/msquic/test_package/src/: example.cpp
.config/: conanfile.py  conanfile.txt  meson-clang  meson-gcc
.config/conan-profiles/: clang  common  gcc
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: .ci_meson.yml
docs/diagrams/: rudp-initial-conversarion.drawio
madturks/core/algorithm/: meson.build
madturks/core/algorithm/inc/mad/: bytegen.hpp
madturks/core/concept/: meson.build
madturks/core/concept/inc/mad/: concepts  has_assign.hpp  has_begin_end.hpp
madturks/core/concept/inc/mad/concept/: has_assign.hpp  has_begin_end.hpp  has_binary_insert.hpp  has_key_type.hpp  has_push_back.hpp  has_unary_insert.hpp  has_value_type.hpp
madturks/core/concurrency/: meson.build
madturks/core/concurrency/inc/mad/: concurrent.hpp
madturks/core/container/: meson.build
madturks/core/container/inc/mad/: circular_buffer.hpp  circular_buffer_base.hpp  circular_buffer_pow2.hpp  circular_buffer_vm.hpp
madturks/core/container/src/: circular_buffer_base.cpp  circular_buffer_pow2.cpp  circular_buffer_vm.cpp
madturks/core/container/test/benchmark/: circular_buffer_bench.cpp
madturks/core/container/test/unit/: ut_circular_buffer.cpp
madturks/core/container/tests/benchmark/: circular_buffer_bench.cpp
madturks/core/container/tests/unit/: ut_circular_buffer.cpp
madturks/core/log/: meson.build
madturks/core/log/inc/mad/: log  log_config.hpp  log_level.hpp  log_macros.hpp  log_printer.hpp
madturks/core/log/src/: log_printer.cpp
madturks/core/log/test/unit/: ut_log.cpp
madturks/core/log/tests/unit/: ut_log.cpp
madturks/core/macro/: meson.build
madturks/core/macro/inc/mad/: macro  macros.hpp
madturks/core/meta/: meson.build
madturks/core/meta/inc/mad/meta/: source_location.hpp
madturks/core/random/: meson.build
madturks/core/random/inc/mad/: random.hpp  random_arithmetic.hpp  random_bytegen.hpp  random_net.hpp  random_string.hpp
madturks/core/random/src/: random.cpp  random_string.cpp
madturks/core/random/test/unit/: ut_random.cpp  ut_random_string.cpp
madturks/core/random/tests/unit/: ut_random_string.cpp
madturks/core/temputils/: meson.build
madturks/core/temputils/inc/mad/: temputils.hpp
madturks/core/temputils/src/: temputils.cpp
madturks/core/testutils/: meson.build
madturks/core/testutils/inc/mad/: static_mock.hpp
madturks/nexus/: meson.build
madturks/nexus/inc/mad/nexus/: callback.hpp  handle_carrier.hpp  handle_context_container.hpp  quic.hpp  quic_application.hpp  quic_base.hpp  quic_callback_function.hpp  quic_callback_types.hpp  quic_client.hpp  quic_configuration.hpp  quic_connection.hpp  quic_connection_context.hpp  quic_error_code.hpp  quic_server.hpp  quic_stream.hpp  quic_stream_context.hpp  result.hpp  send_buffer.hpp  serial_number_carrier.hpp  shared_ptr_raw_equal.hpp  shared_ptr_raw_hash.hpp  stream_container.hpp  value_container.hpp
madturks/nexus/inc/mad/nexus/msquic/: msquic_api.inl  msquic_application.hpp  msquic_base.hpp  msquic_callback_functions.hpp  msquic_client.hpp  msquic_server.hpp
madturks/nexus/include/mad/nexus/: msquic.hpp  quic.hpp  quic_base.hpp  quic_callback_function.hpp  quic_callback_types.hpp  quic_connection_context.hpp  quic_server.hpp  quic_stream_context.hpp
madturks/nexus/include/mad/nexus/msquic/: msquic_api.inl  msquic_base.hpp  msquic_client.hpp
madturks/nexus/src/: msquic.cpp  msquic_api_object.cpp  msquic_application.cpp  msquic_base.cpp  msquic_client.cpp  msquic_server.cpp  quic.cpp  quic_application.cpp  quic_base.cpp  quic_client.cpp  quic_error_code.cpp  quic_error_code_category.cpp  quic_server.cpp
madturks/nexus/test/integration/: it_stream_callback_receive.cpp  it_stream_callback_send_complete.cpp  it_stream_callbacks.cpp  meson.build
madturks/nexus/test/unit/: meson.build  mock_msquic_api.hpp  mock_msquic_application.hpp  mock_msquic_fns.hpp  ut_msquic_application.cpp  ut_msquic_base.cpp  ut_msquic_client.cpp  ut_msquic_server.cpp
nexus/include/nexus/: arq.hpp  msquic.hpp  quic.hpp  session.hpp
nexus/src/: main.cpp  msquic.cpp  msquic_test.cpp  quic.cpp  quic_error_code_category.cpp
sample/: meson.build
sample/src/: lorem_ipsum.hpp  msquic_sample.cpp  msquic_test.cpp  msquic_test_client.cpp  msquic_test_server.cpp  nexus_sample_client.cpp  nexus_sample_server.cpp
schemas/: meson.build
schemas/flatbuffers/: chat.fbs  main.fbs  monster.fbs
